# genmdnav

./: README.rst  pyproject.toml
genmdnav/: __init__.py
tests/: test_genmdnav.py
