[tool.poetry]
name = "genmdnav"
version = "0.1.2"
description = ""
authors = ["Sergey M <yamldeveloper@proton.me>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pylint = "^2.3"
autopep8 = "^1.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
genmdnav = "genmdnav:main"
